# ordinals-typescript

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: edict.rs  etching.rs  lib.rs  rune.rs  rune_id.rs  runestone.rs  terms.rs  util.rs  varint.rs
