[package]
name = "ordinals-lib"
version = "0.0.8"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = { version = "0.30.1", features = ["serde", "base64"] }
console_error_panic_hook = "0.1.7"
hex = "0.4.3"
js-sys = "0.3.69"
ordinals = "0.0.8"
paste = "1.0.14"
serde = "1.0.198"
wasm-bindgen = "0.2.92"
